--- a/page3/page3-ourLegends.html
+++ b/page3/page3-ourLegends.html
@@ -2,9 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Our Legends</title>
   <link rel="stylesheet" type="text/css" href="page3-ourLegends.css">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css' rel='stylesheet'>
+
+
 </head>
 
 <body dir="rtl">
@@ -38,7 +42,9 @@
         </div>
       </fieldset>
       <div>
-        <label class="lbl">הוספת תמונה<input class="txt" type="file" name="photo" accept="image" rows="10" cols="50" ></textarea></label>
+        <label class="lbl">הוספת תמונה</label>
+        <input class="txt" type="file" name="photo" accept="image" rows="10" cols="50" ></textarea>
+        <img class="profile" src="../images/profile.webp" height="115" width="115">
       </div>
       <div class="button">
         <input type="submit" value="יצירת עמוד">
@@ -46,10 +52,22 @@
       </form>
   </div>
 
+
+    
+
   <footer>
-    <div>
-      צור קשר
-    </div>
-  </footer>
+    <nav class="footer-menu">
+      <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact</a></li>
+      </ul>
+  </nav>
+  <div class="footer-info">
+    <p >Copyright © 2023 Our Legends Inc. All Rights Reserved</p>
+    <p>Contact: legends@gmail.com | Phone: 123-456-7890</p>
+</div>   
+</footer>
 </body>
 	
