add videos and fix issues in stories

--- a/stories-and-memories/stories-and-memories.html
+++ b/stories-and-memories/stories-and-memories.html
@@ -25,51 +25,64 @@
                 </p>
                 <p class="years">15/08/1990 - 20/03/2023</p>
             </div>
-
         </section>
 
         <section class="gallery" >
             <h2>גלריה</h2>
-
-            <div class="gallery-images">
+            <div class="gallery-images" id="gallery-images">
                 <img class="img-item" src="../images/or1.jpeg" alt="">
                 <img class="img-item" src="../images/or2.jpeg" alt="">
-                <img id="imageContainer">
             </div>
             <form id="uploadForm" style="display: none;">
-                <input type="file" id="photoInput" accept="image/*">
+                <input type="file" id="imageInput" accept="image/*"><br><br>
                 <button type="submit">העלה</button>
+                <button type="button" id="cancelPhoto">ביטול</button>
+                <p style="color: red">לאחר שתעלה את הדף מחדש התמונות החדשות לא ישמרו</p>
             </form>
             <button id="addPhotoButton">הוסף תמונה</button>
         </section>
 
+        <section class="video" >
+            <h2>סרטונים</h2>
+            <div class="videoList" id="videoList" >
+                <video class="video-item" src="../images/orVideo.mp4" controls></video>
+            </div>
+            <form id="videoForm" style="display: none;">
+                <input type="file" id="videoInput" accept="video/*" required><br><br>
+                <button type="submit">העלה</button>
+                <button type="button" id="cancelVideo">ביטול</button>
+                <p style="color: red">לאחר שתעלה את הדף מחדש הסירטונים החדשים לא ישמרו</p>
+            </form>
+            <button id="addVideoButton">הוסף סירטון</button>
+        </section>
+
         <section id="stories" >
             <h2>סיפורים</h2>
-            <div id="storyList">
-                <div class="all-stories">
-                    <div class="story">
-                        <h3>נטלי אשכר אימו</h3>
-                        <p>״כבה לנו היום אור נדיר באיכותו, שהרעיף רק טוב, אהבה ונתינה על כל מי שנקרה בדרכו. תודות בשמנו לכל הצוות בבית החולים איכילוב, שעשה במשך ימים כלילות כל שביכולתו במקצועיות, מסירות ורגישות. לעשרות החברים המדהימים שעטפו אותנו יום ולילה, חיבקו ובכו יחד איתנו במהלך כל השבוע שייחקק בליבנו לעולמים. לכל עם ישראל שהיה איתנו, חיזק, תמך והתפלל - כל אחד בדרכו ועל פי אמונתו"</p>
-                    </div>
-                    <div class="story">
-                        <h3>חבר קרוב שלו</h3>
-                        <p>"באחד־עשר הימים שאור היה בבית החולים והיינו לידו, חווינו מעין פרידה ארוכה וכואבת",, אני מכיר אותו מגיל 15, בעקבות תחביב משותף – אופנועים. אור היה מוכשר מאוד והישגי מאוד, אבל לא רץ להראות את זה לאף אחד. היה רוכב כמו אלוף, אבל עם עצמו, בשקט שלו, מופנם וצנוע, אור יצר לעצמו חיים מיוחדים. היינו יחד גם בצה"ל, הוא היה מוכשר ובולט מאוד. השיא היה לאחרונה, כששנינו התחרינו בתחרויות איש הברזל והגענו יחד לאליפות העולם. זה היה חלום של שנינו, והוא השיג אותו בחצי מהזמן שלקח לי. הוא היה אדם שיש לו מטרה ועושה הכול כדי לעמוד בה ומצליח. החברים שלו העריכו והעריצו אותו, וכל אחד הרגיש שהוא החבר הכי טוב שלו. בכל חתונה הוא היה הכי שמח ומשמח".</p>
-                    </div>
-                    <div class="story">
-                        <h3>אייל אשכר אחיו</h3>
-                        <p>"אחי הגדול, לא יכולתי שלא להתפעל ולהעריץ אותך, תמיד נשאתי בגאווה את התואר 'אח של אור', והתמוגגתי כשהייתי פוגש אנשים מעולמך שאמרו שאני דומה לך בדיבור ובהתנהגות. זכיתי להביע את אהבתי הרבה אליך בשיחה שלנו שהפכה להיות האחרונה, ואני מקווה שהרגשת אותה בכל ימי חייך".</p>
-                    </div>
-                    <div class="story">
-                        <h3>אלי זילברמן</h3>
-                        <p>"אנחנו חברים עוד מ־2015, אבל ההיכרות המעמיקה התחילה ב־2018, כשעבדנו בחברה ששמה 'שוקיט'. בשנה האחרונה עבדנו יחד בחברת 'ריף טקנולוג'י'. אין מצב שמישהו במשרד לא קיבל ממנו חיוך ו'בוקר טוב'' אי אפשר היה לא לשים לב לנוכחות שלו. חתיך, חייכן, חכם ומרשים בכל קנה מידה, חבר אמת ואדם מצטיין. כל דבר שנגע בתחומי האחריות שלו – הוא עשה הכול כדי להיות בפרטים שלו, והתעקש לחקור, להוביל ולדעת. בימים האחרונים נברתי בהודעות שלנו מימי שוקיט, ונתקלתי בהודעה שסיכמה הכול. סיפרתי לו על בעיה, והוא כבר הסביר איך הוא פתר אותה. כל שיחה או הקלטת הודעה שלו נפתחה בקול רם ומחויך. כמו שהוא גרם לי להרגיש כל כך טוב בקרבתו, אני לומד כעת כמה הוא נגע במאות אנשים אחרים".</p>
-                    </div>
+            <div class="all-stories" id="all-stories">
+                <div class="story">
+                    <h3>נטלי אשכר אימו</h3>
+                    <p>״כבה לנו היום אור נדיר באיכותו, שהרעיף רק טוב, אהבה ונתינה על כל מי שנקרה בדרכו. תודות בשמנו לכל הצוות בבית החולים איכילוב, שעשה במשך ימים כלילות כל שביכולתו במקצועיות, מסירות ורגישות. לעשרות החברים המדהימים שעטפו אותנו יום ולילה, חיבקו ובכו יחד איתנו במהלך כל השבוע שייחקק בליבנו לעולמים. לכל עם ישראל שהיה איתנו, חיזק, תמך והתפלל - כל אחד בדרכו ועל פי אמונתו"</p>
+                </div>
+                <div class="story">
+                    <h3>חבר קרוב שלו</h3>
+                    <p>"באחד־עשר הימים שאור היה בבית החולים והיינו לידו, חווינו מעין פרידה ארוכה וכואבת",, אני מכיר אותו מגיל 15, בעקבות תחביב משותף – אופנועים. אור היה מוכשר מאוד והישגי מאוד, אבל לא רץ להראות את זה לאף אחד. היה רוכב כמו אלוף, אבל עם עצמו, בשקט שלו, מופנם וצנוע, אור יצר לעצמו חיים מיוחדים. היינו יחד גם בצה"ל, הוא היה מוכשר ובולט מאוד. השיא היה לאחרונה, כששנינו התחרינו בתחרויות איש הברזל והגענו יחד לאליפות העולם. זה היה חלום של שנינו, והוא השיג אותו בחצי מהזמן שלקח לי. הוא היה אדם שיש לו מטרה ועושה הכול כדי לעמוד בה ומצליח. החברים שלו העריכו והעריצו אותו, וכל אחד הרגיש שהוא החבר הכי טוב שלו. בכל חתונה הוא היה הכי שמח ומשמח".</p>
+                </div>
+                <div class="story">
+                    <h3>אייל אשכר אחיו</h3>
+                    <p>"אחי הגדול, לא יכולתי שלא להתפעל ולהעריץ אותך, תמיד נשאתי בגאווה את התואר 'אח של אור', והתמוגגתי כשהייתי פוגש אנשים מעולמך שאמרו שאני דומה לך בדיבור ובהתנהגות. זכיתי להביע את אהבתי הרבה אליך בשיחה שלנו שהפכה להיות האחרונה, ואני מקווה שהרגשת אותה בכל ימי חייך".</p>
+                </div>
+                <div class="story">
+                    <h3>אלי זילברמן</h3>
+                    <p>"אנחנו חברים עוד מ־2015, אבל ההיכרות המעמיקה התחילה ב־2018, כשעבדנו בחברה ששמה 'שוקיט'. בשנה האחרונה עבדנו יחד בחברת 'ריף טקנולוג'י'. אין מצב שמישהו במשרד לא קיבל ממנו חיוך ו'בוקר טוב'' אי אפשר היה לא לשים לב לנוכחות שלו. חתיך, חייכן, חכם ומרשים בכל קנה מידה, חבר אמת ואדם מצטיין. כל דבר שנגע בתחומי האחריות שלו – הוא עשה הכול כדי להיות בפרטים שלו, והתעקש לחקור, להוביל ולדעת. בימים האחרונים נברתי בהודעות שלנו מימי שוקיט, ונתקלתי בהודעה שסיכמה הכול. סיפרתי לו על בעיה, והוא כבר הסביר איך הוא פתר אותה. כל שיחה או הקלטת הודעה שלו נפתחה בקול רם ומחויך. כמו שהוא גרם לי להרגיש כל כך טוב בקרבתו, אני לומד כעת כמה הוא נגע במאות אנשים אחרים".</p>
                 </div>
             </div>
             <div id="storyForm">
                 <form>
-                    <input type="text" id="titleInput" placeholder="Title" required>
-                    <textarea id="storyInput" placeholder="Story" required></textarea>
+                    <input type="text" id="titleInput" placeholder="עד הסיפור" required><br><br>
+                    <textarea id="storyInput" placeholder="תוכן הסיפור" required></textarea><br>
                     <button type="submit">העלה</button>
+                    <button type="button" id="cancelStory">ביטול</button>
+                    <p style="color: red">לאחר שתעלה את הדף מחדש הסיפורים החדשים לא ישמרו</p>
                 </form>
             </div>
             <button id="addStoryButton">הוסף סיפור</button>
