add Messages and Updates

--- a/stories-and-memories/stories-and-memories.html
+++ b/stories-and-memories/stories-and-memories.html
@@ -2,7 +2,7 @@
 <html lang="he" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>stories and memories</title>
+    <title>Stories and Memories</title>
     <link rel="stylesheet" type="text/css" href="stories-and-memories.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
@@ -11,7 +11,7 @@
         <img src="../images/OurLegendsLogo.png" ; id="logo">
     </header>
     <main>
-        <section class="gallery" id="main-gallery" >
+        <section id="main-gallery" >
             <img class="img-main" src="../images/orAshkar.png" alt="">
             <div class="main-content">
                 <h1>אור אשכר</h1>
@@ -23,7 +23,7 @@
                     מקום אירוע: תל אביב - רחוב דיזינגוף<br>
                     תאריך אירוע: ט"ז באדר תשפ"ג, 09/03/2023<br>
                 </p>
-                <p class="years">15/08/1990 - 20/03/2023</p>
+                <p>15/08/1990 - 20/03/2023</p>
             </div>
         </section>
 
