--- a/stories-and-memories/stories-and-memories.html
+++ b/stories-and-memories/stories-and-memories.html
@@ -37,7 +37,7 @@
                 <input type="file" id="imageInput" accept="image/*"><br><br>
                 <button type="submit">העלה</button>
                 <button type="button" id="cancelPhoto">ביטול</button>
-                <p style="color: red">לאחר שתעלה את הדף מחדש התמונות החדשות לא ישמרו</p>
+                <p class="warning">לאחר שתעלה את הדף מחדש התמונות החדשות לא ישמרו</p>
             </form>
             <button id="addPhotoButton">הוסף תמונה</button>
         </section>
@@ -51,7 +51,7 @@
                 <input type="file" id="videoInput" accept="video/*" required><br><br>
                 <button type="submit">העלה</button>
                 <button type="button" id="cancelVideo">ביטול</button>
-                <p style="color: red">לאחר שתעלה את הדף מחדש הסירטונים החדשים לא ישמרו</p>
+                <p class="warning">לאחר שתעלה את הדף מחדש הסירטונים החדשים לא ישמרו</p>
             </form>
             <button id="addVideoButton">הוסף סירטון</button>
         </section>
@@ -82,7 +82,7 @@
                     <textarea id="storyInput" placeholder="תוכן הסיפור" required></textarea><br>
                     <button type="submit">העלה</button>
                     <button type="button" id="cancelStory">ביטול</button>
-                    <p style="color: red">לאחר שתעלה את הדף מחדש הסיפורים החדשים לא ישמרו</p>
+                    <p class="warning">לאחר שתעלה את הדף מחדש הסיפורים החדשים לא ישמרו</p>
                 </form>
             </div>
             <button id="addStoryButton">הוסף סיפור</button>
