add header and navbar

--- a/messages-and-updates/messages-and-updates.html
+++ b/messages-and-updates/messages-and-updates.html
@@ -8,9 +8,7 @@
     <link href='https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css' rel='stylesheet'>
 </head>
 <body>
-    <header>
-        <img src="../images/OurLegendsLogo.png" ; id="logo">
-    </header>
+    <header id="headerContainer"></header>
     <main>
         <section id="main-gallery" >
             <img class="img-main" src="../images/orAshkar.png" alt="">
