--- a/stories-and-memories/stories-and-memories.html
+++ b/stories-and-memories/stories-and-memories.html
@@ -7,9 +7,7 @@
     <link href='https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css' rel='stylesheet'>
 </head>
 <body>
-    <header>
-        <img src="../images/OurLegendsLogo.png" ; id="logo">
-    </header>
+    <header id="headerContainer"></header>
     <main>
         <section id="main-gallery" >
             <img class="img-main" src="../images/orAshkar.png" alt="">
@@ -88,6 +86,7 @@
             <button id="addStoryButton">הוסף סיפור</button>
         </section>
     </main>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="stories-and-memories.js"></script>
 </body>
 </html>
