add personal page

--- a/page1/home-page.html
+++ b/page1/home-page.html
@@ -7,13 +7,14 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 <body>
-    <div class="container">
+    <header>
         <img src="../images/OurLegendsLogo.png" ; id="logo">
         <input type="text" placeholder="Search for a legend" id="search">
-
+    </header>
+    <main class="container">
         <h1 id="discription">
-             אתר זיכרון והנצחה של היקרים לנו מכל<br>
-             שאינם איתנו עוד אך הם בליבנו לעד
+            אתר זיכרון והנצחה של היקרים לנו מכל<br>
+            שאינם איתנו עוד אך הם בליבנו לעד
         </h1>
         <div class="boardOfLegend">
             <div class="legend">
@@ -41,8 +42,10 @@
                 </a>
             </div>
         </div>
-
         <a href="new-legend.html" class="button">יצירת דף הנצחה חדש</a>
-    </div>
+    </main>
+
+
+
 </body>
 </html>
