--- a/stories-and-memories/stories-and-memories.html
+++ b/stories-and-memories/stories-and-memories.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Stories and Memories</title>
     <link rel="stylesheet" type="text/css" href="stories-and-memories.css">
+    <link rel="stylesheet" type="text/css" href="../personal-page-basic/personal-page.css">
     <link href='https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css' rel='stylesheet'>
 </head>
 <body>
