--- a/page3/page3-ourLegends.html
+++ b/page3/page3-ourLegends.html
@@ -6,7 +6,7 @@
   <title>Our Legends</title>
   <link rel="stylesheet" type="text/css" href="page3-ourLegends.css">
   <link href='https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css' rel='stylesheet'>
-  <link href="../footer/footer.css" rel="stylesheet">
+  <link href="../footer/footer.css" type="text/css" rel="stylesheet">
 
 </head>
 
@@ -38,7 +38,7 @@
       </div>
       <div>
         <label for="burialPlace" class="lbl"> מקום קבורה</label>
-        <input class="txt" type="text" id="burialPlace" name="burialPlace" placeholder="[..נא ציין עיר, בית עלמין, מספר חלקה/קבר]">
+        <input class="txt" type="text" id="burialPlace" name="burialPlace" placeholder="[נא ציין עיר, בית עלמין, מספר חלקה/קבר]">
       </div>
 
       <div>
