--- a/messages-and-updates/messages-and-updates.html
+++ b/messages-and-updates/messages-and-updates.html
@@ -78,6 +78,6 @@
         </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="messages-and-updates.js"></script>
+    <script src="messages-and-updates.js" type="text/javascript"></script>
 </body>
 </html>
