--- a/stories-and-memories/stories-and-memories.html
+++ b/stories-and-memories/stories-and-memories.html
@@ -88,6 +88,6 @@
         </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="stories-and-memories.js"></script>
+    <script src="stories-and-memories.js" type="text/javascript"></script>
 </body>
 </html>
