--- a/personal-memorial-page/personal-memorial-page.html
+++ b/personal-memorial-page/personal-memorial-page.html
@@ -26,6 +26,6 @@
       </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="personal-memorial-page.js"></script>
+    <script src="personal-memorial-page.js" type="text/javascript"></script>
 </body>
 </html>
