Add Responsive styles

--- a/personal-memorial-page/personal-memorial-page.html
+++ b/personal-memorial-page/personal-memorial-page.html
@@ -5,6 +5,7 @@
     <title>Personal Memorial Page</title>
     <link rel="stylesheet" type="text/css" href="personal-memorial-page.css">
     <link rel="stylesheet" type="text/css" href="../personal-page-basic/personal-page.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header id="headerContainer"></header>
