--- a/stories-and-memories/stories-and-memories.html
+++ b/stories-and-memories/stories-and-memories.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../personal-page-basic/personal-page.css">
     <link rel="stylesheet" type="text/css" href="stories-and-memories.css">
     <link href='https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header id="headerContainer"></header>
