Add Responsive styles

--- a/page1/home-page.html
+++ b/page1/home-page.html
@@ -36,7 +36,7 @@
                 </a>
             </div>
             <div class="legend">
-                <a href="orAshkar.html">
+                <a href="../personal-memorial-page/personal-memorial-page.html">
                     <img src="../images/orAshkar.png" alt="אור אשכר">
                     <h2>אור אשכר</h2>
                 </a>
@@ -44,8 +44,6 @@
         </div>
         <a href="new-legend.html" class="button">יצירת דף הנצחה חדש</a>
     </main>
-
-
 
 </body>
 </html>
