Add Responsive styles

--- a/personal-page-basic/header.html
+++ b/personal-page-basic/header.html
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar">
-        <img src="../images/OurLegendsLogo.png" ; id="logo">
+        <img src="../images/OurLegendsLogo.png" id="logo" alt="logo">
         <ul class="nav-links">
             <li><a href="../page1/home-page.html">דף בית</a></li>
             <li><a href="../personal-memorial-page/personal-memorial-page.html">דף הנצחה אישי</a></li>
