--- a/stories-and-memories/stories-and-memories.html
+++ b/stories-and-memories/stories-and-memories.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header id="headerContainer"></header>
+    <div id="headerContainer"></div>
     <main>
         <section id="main-gallery" >
             <img class="img-main" src="../images/orAshkar.png" alt="">
@@ -80,7 +80,7 @@
             <button id="addStoryButton">הוסף סיפור</button>
         </section>
     </main>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="stories-and-memories.js" type="text/javascript"></script>
 </body>
 </html>
