--- a/page1/home-page.html
+++ b/page1/home-page.html
@@ -2,9 +2,12 @@
 <html lang="he">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Our Legends</title>
     <link rel="stylesheet" type="text/css" href="home-page-css.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link href="../footer/footer.css" type="text/css" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -42,8 +45,12 @@
                 </a>
             </div>
         </div>
-        <a href="new-legend.html" class="button">יצירת דף הנצחה חדש</a>
+        <a href="../page3/page3-ourLegends.html" class="button">יצירת דף הנצחה חדש</a>
     </main>
+    <div id="footerContainer"></div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="../footer/footer.js" type="text/javascript"></script>
+
 
 </body>
 </html>
