--- a/page3/page3-ourLegends.html
+++ b/page3/page3-ourLegends.html
@@ -45,17 +45,17 @@
         
         <section class="burialGallery">
           <h1 class="lbl">תמונות קבורה</h1><br><br>
-          <div class="auto burial-img-box">
+          <div class="auto burial-img-box burial1box">
             <div ><label for="burial1">מפת החלקה </label></div>
             <div><input name="burial1" type="file" accept="image/*,.pdf" onchange="loadFile(event,'burial1')"></div>
             <div><img class="burial-img" id="burial1" src="../images/img-icon.jpeg"></div>
           </div>
-          <div class="auto burial-img-box">
+          <div class="auto burial-img-box burial2box">
             <div><label for="burial2"> מפה מפורטת </label></div>
             <div><input name="burial2" type="file" accept="image/*,.pdf" onchange="loadFile(event,'burial2')"></div>
             <div><img class="burial-img" id="burial2" src="../images/img-icon.jpeg"></div>
           </div>
-          <div class="auto burial-img-box">
+          <div class="auto burial-img-box burial3box">
             <div><label for="burial3"> תמונת הקבר</label></div>
             <div><input name="burial3" type="file" accept="image/*,.pdf" onchange="loadFile(event,'burial3')" ></div>
             <div ><img class="burial-img" id="burial3" src="../images/img-icon.jpeg"></div>
