--- a/page3/page3-ourLegends.html
+++ b/page3/page3-ourLegends.html
@@ -80,7 +80,7 @@
         </form>
       </main>
 
-  <div id="footerContainer"></div>
+  <footer id="footerContainer"></footer>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="../footer/footer.js" type="text/javascript"></script>
