footer-fix-links

--- a/footer/footer.html
+++ b/footer/footer.html
@@ -2,10 +2,10 @@
 <img src="../images/OurLegendsLogo.png" class="footer-logo">
 <nav class="footer-menu">
   <ul>
-      <li><a href="javascript:footerBox('contact')">צור קשר</a></li>
+      <li><a onclick="javascript:footerBox('contact')">צור קשר</a></li>
       <li><a href="javascript:footerBox('about')">אודות</a></li>
       <li><a href="javascript:footerBox('privacy')">מדיניות פרטיות</a></li>
       <li><a href="javascript:footerBox('accessibility')">הצהרת נגישות</a></li>
-      <br><div id="pop-div"></div>
+      <br><p id="pop-menu"></p>
   </ul>
 </nav>
