--- a/messages-and-updates/messages-and-updates.html
+++ b/messages-and-updates/messages-and-updates.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="messages-and-updates.css">
     <link href='https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../footer/footer.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <header id="headerContainer"></header>
@@ -70,7 +71,11 @@
             </div>
         </section>
     </main>
+
+    <footer id="footerContainer"></footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="messages-and-updates.js" type="text/javascript"></script>
+    <script src="../footer/footer.js" type="text/javascript"></script>
+
 </body>
 </html>
