--- a/page1/home-page.html
+++ b/page1/home-page.html
@@ -47,7 +47,9 @@
         </div>
         <a href="../page3/page3-ourLegends.html" class="button">יצירת דף הנצחה חדש</a>
     </main>
-    <div id="footerContainer"></div>
+
+    <footer id="footerContainer"></footer>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../footer/footer.js" type="text/javascript"></script>
 
