--- a/stories-and-memories/stories-and-memories.html
+++ b/stories-and-memories/stories-and-memories.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" type="text/css" href="stories-and-memories.css">
     <link href='https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../footer/footer.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <div id="headerContainer"></div>
+    <header id="headerContainer"></header>
     <main>
         <section id="main-gallery" >
             <img class="img-main" src="../images/orAshkar.png" alt="">
@@ -80,7 +81,11 @@
             <button id="addStoryButton">הוסף סיפור</button>
         </section>
     </main>
+
+    <footer id="footerContainer"></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="stories-and-memories.js" type="text/javascript"></script>
+    <script src="../footer/footer.js" type="text/javascript"></script>
+
 </body>
 </html>
