--- a/messages-and-updates/messages-and-updates.html
+++ b/messages-and-updates/messages-and-updates.html
@@ -21,6 +21,14 @@
         </section>
 
         <section>
+            <ul id="eventList1">
+                <li data-event-id="1">שליחת פרחים</li>
+                <li data-event-id="2">הדלקת נר</li>
+                <li data-event-id="3">שיתוף דף</li>
+            </ul>
+        </section>
+
+        <section>
             <h1>הודעות ועידכונים</h1>
             <div id="messageList" class="list">
                 <div class="message">
