amit-shlishi-night2

--- a/add-new-page/add-new-page.html
+++ b/add-new-page/add-new-page.html
@@ -10,7 +10,7 @@
 </head>
 
 <body dir="rtl">
-    <a href="../page1/home-page.html" id="homePageLink"><img src="../images/OurLegendsLogo.png" id="logo"></a>
+    <a href="../home-page/home-page.html" id="homePageLink"><img src="../images/OurLegendsLogo.png" id="logo"></a>
     <header id="newPageHeader">
       <h1 id="addPageTitle">הוספת עמוד חדש</h1>
       <img src="../images/addPage.png"; id="addPageImg">
