--- a/home-page/home-page.html
+++ b/home-page/home-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Our Legends</title>
-    <link rel="stylesheet" type="text/css" href="home-page-css.css">
+    <link rel="stylesheet" type="text/css" href="home-page.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href="../footer/footer.css" type="text/css" rel="stylesheet">
 
@@ -45,7 +45,7 @@
                 </a>
             </div>
         </div>
-        <a href="../page3/page3-ourLegends.html" class="button">יצירת דף הנצחה חדש</a>
+        <a href="../add-new-page/add-new-page.html" class="button">יצירת דף הנצחה חדש</a>
     </main>
 
     <footer id="footerContainer"></footer>
