--- a/personal-memorial-page/personal-memorial-page.html
+++ b/personal-memorial-page/personal-memorial-page.html
@@ -5,7 +5,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>Our Legends</title>
   <link rel="stylesheet" type="text/css" href="../personal-page-basic/personal-page.css">
-  <link rel="stylesheet" type="text/css" href="page2-personal-page.css">
+  <link rel="stylesheet" type="text/css" href="personal-memorial-page.css">
   <link rel="stylesheet" type="text/css" href="../footer/footer.css">
   <link href='https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css' rel='stylesheet'>
 </head>
