--- a/add-new-page/add-new-page.html
+++ b/add-new-page/add-new-page.html
@@ -75,7 +75,7 @@
         </div>
 
         <div class="button">
-          <input type="submit" value="יצירת עמוד">
+          <input id="subButton" type="submit" value="יצירת עמוד">
         </div>
       </form>
     </main>
