--- a/personal-memorial-page/personal-memorial-page.html
+++ b/personal-memorial-page/personal-memorial-page.html
@@ -90,4 +90,7 @@
             </div>
         </section>  
     </main>
+    <footer id="footerContainer"></footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="../footer/footer.js" type="text/javascript"></script>
 </body>
