--- a/add-new-page/add-new-page.html
+++ b/add-new-page/add-new-page.html
@@ -19,11 +19,11 @@
     <main class="form-div">
       <form name="legendsForm" action="add-new-page.php" method="post" onsubmit="return validateForm()" enctype="multipart/form-data">
         <div>
-          <label for="firstName" class="lbl" >שם פרטי</label>
+          <label for="firstName" class="lbl">שם פרטי</label>
           <input class="txt" type="text" id="firstName" name="firstName" maxlength="32" pattern="[A-Za-z]{1,32}" placeholder="[כתוב את תשובתך כאן]" required>
         </div>
         <div>
-          <label for="lastName" class="lbl" >שם משפחה</label>
+          <label for="lastName" class="lbl">שם משפחה</label>
           <input class="txt" type="text" id="lastName" name="lastName" maxlength="32" pattern="[A-Za-z]{1,32}" placeholder="[כתוב את תשובתך כאן]" required>
         </div>
         <div>
@@ -75,7 +75,7 @@
         </div>
 
         <div class="button">
-          <input id="subButton" type="submit" value="יצירת עמוד">
+          <input type="submit" value="יצירת עמוד">
         </div>
       </form>
     </main>
