messaged-updates-buttons

--- a/messages-and-updates/messages-and-updates.html
+++ b/messages-and-updates/messages-and-updates.html
@@ -21,10 +21,11 @@
         </section>
 
         <section>
+            <h2 id="eventsTitle">ביכולתך לבצע מספר פעולות הנצחה:</h2>
             <ul id="eventList1">
-                <li data-event-id="1">שליחת פרחים</li>
-                <li data-event-id="2">הדלקת נר</li>
-                <li data-event-id="3">שיתוף דף</li>
+                <li data-event-id="1"><button>שליחת פרחים</button></li>
+                <li data-event-id="2"><button>הדלקת נר</button></li>
+                <li data-event-id="3"><button>שיתוף דף</button></li>
             </ul>
         </section>
 
