--- a/home-page/home-page.html
+++ b/home-page/home-page.html
@@ -21,19 +21,19 @@
         </h1>
         <div class="boardOfLegend">
             <div class="legend">
-                <a href="amitAvrutsky.html">
+                <a href="javascript:notExists()">
                     <img src="../images/amitAvrutsky.jpeg" alt="עמית אברוצקי">
                     <h2>עמית אברוצקי</h2>
                 </a>
             </div>
             <div class="legend">
-                <a href="gilBanks.html">
+                <a href="javascript:notExists()">
                     <img src="../images/gilBanks.jpeg" alt="גיל בנקס">
                     <h2>גיל בנקס</h2>
                 </a>
             </div>
             <div class="legend">
-                <a href="natalieGilad.html">
+                <a href="javascript:notExists()">
                     <img src="../images/natalieGilad.jpeg" alt="נטלי גיל-עד">
                     <h2>נטלי גיל-עד</h2>
                 </a>
